--- a/Projects/sigmierLeague/style.css
+++ b/Projects/sigmierLeague/style.css
@@ -44,14 +44,19 @@ table{
 
 }
 
-
+/* makes the points column darker */
+.points {
+      
+    background: #FBFAFA; /* Match the table header background */
+   
+}
 
 .topRow{
     /* font + text */
     font-family: Verdana, sans-serif;
     font-size: 12px;
     font-weight: 700;
-    line-height: 25%;
+    line-height: 40%;
     text-decoration: rgb(135,102,138);
     background-color: #FBFAFA;
 
@@ -66,7 +71,6 @@ table{
     
     
 }
-
 
 
 .club{
@@ -90,12 +94,24 @@ td, th {
 
     padding: 8px;
   }
+  
 
 
 
 
 /* Ensure the table scrolls horizontally on smaller screens */
 @media only screen and (max-width: 768px) {
+    .leagueLogo{
+        
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+        height: auto;
+        width:25%;
+        padding-bottom: 2%;
+    
+    }
+    
     .table-wrapper {
         display: block;
         width: 100%;
@@ -123,6 +139,17 @@ td, th {
     thead th, tbody td {
         padding: 10px;
     }
+
+    /* makes points column stick on mobile */
+    .points {
+        
+        position: sticky;
+        right: 0; /* Adjust based on where you want it to stick */
+    
+        z-index: 2; /* Ensure it stays above other content */
+    }
+    
+
 }
 
 
